--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 GitHub <noreply@github.com>
+Stefano Gallotti <sgallotti@expediagroup.com>
 Stegallo <Stegallo@users.noreply.github.com>
 Stegallo <stegallo@gmail.com>
